# legend-ai-python

./: .buildtrigger  .claude-branch  .env.example  .env.production.template  .gitignore  .pre-commit-config.yaml  ACCURACY_AUDIT.md  AI_CONVERSATIONAL_ASSISTANT.md  ALERTING_INFRASTRUCTURE.md  ALERTING_INFRASTRUCTURE_ANALYSIS.md  ALGORITHM_AUDIT.md  ANTIGRAVITY_TEST_PROMPT.md  API_DOCUMENTATION.md  API_ENDPOINTS.md  API_OPTIMIZATION_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE_DIAGRAM.txt  ARCHITECTURE_DIAGRAMS.txt  ARCHITECTURE_QUICK_REFERENCE.md  AUTO_POSTING_GUIDE.md  BACKTESTING_README.md  BUG_FIX_REPORT.md  CACHING_ANALYSIS.md  CACHING_QUICK_REFERENCE.txt  CHANGELOG.md  CHART_IMG_API.md  CLAUDE_CODE_WORKFLOW.md  CLI_IMPLEMENTATION.md  CLI_README.md  CODEBASE_ANALYSIS.md  CODEBASE_ARCHITECTURE.md  CODEBASE_ARCHITECTURE_AND_TAX_INTEGRATION.md  CODEBASE_ARCHITECTURE_COMPREHENSIVE.md  CODEBASE_EXPLORATION_MTF.md  CODEBASE_EXPLORATION_SUMMARY.md  CODEBASE_OVERVIEW.md  CODEBASE_OVERVIEW_DETAILED.md  CODEBASE_STRUCTURE_FOR_VISUALIZATIONS.md  CONVERSION_PROGRESS.md  CONVERSION_SUMMARY.md  (+155 more)
.cursor/: config.json
.github/: TESTING_SETUP.md  dependabot.yml
.pytest_tmp/: test_watchlist_file_fallback_fcurrent
alembic/: README  env.py
app/: config.py  database.py  discord_admin.py  discord_bot.py  discord_tasks.py  discord_views.py  docs_config.py  lifecycle.py  main.py  mcp_tools.py  models.py  models_discord.py
backup/: README.md  backup_all.sh  backup_database.sh  backup_redis.sh  backup_universe.sh  disaster_recovery_runbook.md  monitor_backups.py  restore_database.sh
cli/: README.md  legend-cli.py  setup.py
data/: universe_seed.json  yahoo_offline.json
deploy/: README.md  check_env_vars.py  deploy.sh  pre-deploy-check.sh  rollback.sh  run_migrations.py  smoke-tests.sh
docs/: ADVANCED_CHARTS.md  AI_PRICE_FORECASTING.md  API_DOCUMENTATION_GUIDE.md  ARCHITECTURE_GUIDE.md  BROKER_CONNECTIONS.md  CHART_IMG_API.md  CHART_IMG_SETUP.md  CHART_RECORDING.md  CONTRIBUTING.md  COST_OPTIMIZATION.md  DATABASE_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  ENGAGEMENT_FEATURES.md  ERROR_PLAYBOOK.md  FEATURES_SUMMARY.md  INTELLECTIA_COMPARISON.md  INTERACTIVE_CHARTS.md  Launch_Readiness_Checklist.md  Legend_AI_MVP.md  Legend_AI_PRD.md  Legend_AI_Roadmap.md  MARKET_SEASONALITY_GUIDE.md  MARKET_STRUCTURE_ANALYSIS.md  ML_TRAINING_PLATFORM.md  MONITORING.md  MTF_SYSTEM_GUIDE.md  MVP_BUILD_PLAN.md  MVP_SPEC.md  NEWS_SENTIMENT_INTEGRATION.md  NEW_FEATURES.md  NLP_SEARCH.md  PATTERN_DETECTION_ANALYSIS.md  PDF_REPORTS.md  PLAYBACK_AND_SIMULATION.md  Phase_1_Exit.md  Production_Test_Report.md  QUICK_START_ENGAGEMENT.md  README.md  RISK_MANAGEMENT.md  ROADMAP.md  (+20 more)
examples/: README.md  broker_trading_example.py  generate_reports.py  market_structure_example.py  ml_training_example.py  mtf_comprehensive_example.py  nlp_search_demo.py  paper_trading_example.py  risk_management_demo.py  standalone_test.py  strategy_examples.py
formula/: legend-ai.rb
legend_cli/: __init__.py  __main__.py  client.py  config_manager.py  formatters.py  main.py  utils.py
migrations/: 001_add_sentiment_tables.sql  add_screener_tables.py
monitoring/: README.md
ops/: observability.yml
patternz_source/: Patternz.AboutForm.resx  Patternz.AnalyzeFormHelp.resx  Patternz.CandlesForm.resx  Patternz.FileFormatHelp.resx  Patternz.FilterForm.resx  Patternz.FixSplitForm.resx  Patternz.HelpBestTrade.resx  Patternz.HelpCPIForm.resx  Patternz.HelpFibFinder.resx  Patternz.HelpForecastForm.resx  Patternz.HelpListForm.resx  Patternz.HelpMainFormPortfolio.resx  Patternz.HelpScoreForm.resx  Patternz.HelpSimulatorForm.resx  Patternz.MainFormHelp.resx  Patternz.Mainform.resx  Patternz.PatternsForm.resx  Patternz.Resources.resx  Patternz.UpdateHelpForm.resx  Patternz.csproj
playground/: index.html
scripts/: cleanup_tests.py  comprehensive_check.py  ingest_universe.py  init_engagement.py  init_nlp_search.py  migrate_chart_recordings.py  setup_ci_secrets.sh
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/legend_ai/: __init__.py  client.py  exceptions.py  models.py
sdk/python/legend_ai/resources/: __init__.py  ai.py  charts.py  market.py  patterns.py  risk.py  trades.py  universe.py  watchlist.py
static/: engagement.html  manifest.json  service-worker.js
templates/: advanced-charts.html  chart_recording.html  dashboard.html  market_viz.html  options_analytics.html  smart_money_dashboard.html  tv_symbol_lab.html
tests/: conftest.py  playwright_mcp_dashboard_test.js  test_advanced_risk.py  test_all_detectors_unit.py  test_analyze_contract.py  test_api_costs.py  test_api_endpoints.py  test_api_integration.py  test_auto_posting.py  test_backtesting.py  test_broadening.py  test_bulkowski_integration.py  test_channels.py  test_charting.py  test_cli.py  test_comparison_api.py  test_crypto_analysis.py  test_e2e_flows.py  test_execution.py  test_export.py  test_forecasting.py  test_head_shoulders.py  test_indicators.py  test_market_data.py  (+37 more)
(+537 files in other folders)
