[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.bandit]
skips = ["B101"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
